[package]
name = "memefs"
version = "0.2.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
description = "A useless filesystem"
homepage = "htts://github.com/svenstaro/memefs"
repository = "htts://github.com/svenstaro/memefs"
readme = "README.md"
keywords = ["fuse", "filesystem"]
categories = ["filesystem"]
license = "MIT"
edition = "2018"

[dependencies]
fuse = "0.3"
time = "0.1"
libc = "0.2"
clap = "2"
reqwest = "0.9"
serde_json = "1"
lazy_static = "1"
ctrlc = { version = "3", features = ["termination"] }
